# mcpanel

./: .gitignore  MCPanel.icns  Package.swift  README.md  TESTING.md  build-app.sh  mcpanel-cli  project.yml  test_commands.swift
.claude/: CLAUDE.md  settings.json
.cursor/rules/: mcpanel-style-guide.mdc
.github/workflows/: release.yml
MCPanel.xcodeproj/: project.pbxproj
MCPanel.xcodeproj/xcshareddata/xcschemes/: MCPanel.xcscheme
Scripts/: windowshot.swift
ios/OpenAgentDashboard/Models/: Mission.swift
ios/OpenAgentDashboard/Services/: APIService.swift
mcpanel/: Info.plist  MCPanel.entitlements  MCPanelApp.swift
mcpanel-bridge/: ARCHITECTURE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mcpanel/Models/: ConsoleMessage.swift  FileItem.swift  Plugin.swift  Server.swift
mcpanel/Services/: ANSIParser.swift  DebugLogger.swift  MCPanelBridgeProtocol.swift  MCPanelBridgeService.swift  PTYService.swift  PerformanceAlertService.swift  PersistenceService.swift  SSHService.swift  ServerManager.swift  UploadManager.swift
mcpanel/Views/: ConsoleView.swift  ContentView.swift  DashboardView.swift  FileBrowserView.swift  OnboardingView.swift  PluginsView.swift  ServerDetailView.swift  ServerPropertiesView.swift  SidebarView.swift  SwiftTerminalView.swift
mcpanel/Views/Components/: CommandDebugPanel.swift  CommandInputBar.swift  (+4 more)
mcwrap-rs/: Cargo.toml
mcwrap-rs/src/: main.rs  pty.rs
tools/: DEBUG-COMMAND-COMPLETION.md  sample-commands.json  test-command-completion.swift
wrappers/: README.md  mc-wrapper  mc-wrapper-socat  mcwrap
(+25 files in other folders)
