[package]
name = "mcwrap"
version = "0.1.0"
edition = "2021"
description = "Minecraft server wrapper with PTY support for interactive console"

[dependencies]
# PTY handling
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Path handling
dirs = "5"
# Serialization for state
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
# For MD5 hashing (server ID)
md5 = "0.7"

[profile.release]
opt-level = "z"
lto = true
strip = true
